--- a/views/_partials/header.ejs
+++ b/views/_partials/header.ejs
@@ -5,26 +5,31 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title>Document</title>
+    <link rel="stylesheet" href="/stylesheets/style.css">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-
+    <link href="https://fonts.googleapis.com/css?family=Butterfly+Kids" rel="stylesheet">
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 </head>
 <body>
     <nav>   
-        <div class="nav-wrapper">
-                <a href="#" class="brand-logo">Marquez Tutoring</a>
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <div class="nav-wrapper navbarmain">
+                <ul id="nav-mobile" class="hide-on-med-and-down">
                     <li>
-                        <a class="" href="#">Parents</a>
+                        <a class="" href="/">Home</a>
                     </li>
                     <li>
-                        <a class="" href="#">Students</a>
+                        <a class="" href="">Parents</a>
+                    </li>
+                    <li>
+                        <a class="" href="/students">Students</a>
                     </li>
                     <li>
                     <a class="" href="#">About</a>
-                    </li>                
+                    </li>  
+                    
+                   
             
                 </ul>
         </div>
