--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,46 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-color: #fff8db;
 }
 
 a {
   color: #00B7FF;
+}
+
+.banner {
+  margin-top: -8px;
+  z-index: -1000;
+  height: 350px;
+}
+
+.nav-wrapper {
+  background-color: #a81010 !important;
+}
+
+nav {
+  height: 55px !important;
+  border-bottom: 3px solid rgba(0, 0, 0, 0.5);
+}
+
+#marquezlogo {
+  margin-top: -25%;
+  margin-left: 35%;
+  font-size: 126px;
+  color: rgba(255,255,255,.75);
+  font-family: 'Butterfly Kids', cursive;
+}
+
+.cardss {
+  display: inline-block;
+
+}
+
+.cards {
+  width: 350px !important; 
+  padding: 20px !important;
+
+}
+
+.container {
+  margin-top: 5% !important;
+  margin-left: 5% !important;
 }
