--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,7 @@
 <%- include('./_partials/header') %>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+<div>
+  <img class="banner" src="https://i.imgur.com/xElPX5B.jpg" width="100%" alt=""> 
+  <h1 id="marquezlogo">Marquez Tutoring</h1>
+</div>
   </body>
 </html>
