Working on routing

--- a/views/students/new.ejs
+++ b/views/students/new.ejs
@@ -1,5 +1,15 @@
 <%- include('./../_partials/header') %>
 
 
+ 	<form action="/students" method="post">
+		<div class="row addform">
+			<h1>New Student</h1>
+            <input name="name" placeholder="Student's Name" type="text"> 
+            <input  name="parent" placeholder="Parent's Name" type="text"> 
+            <input  name="grade" placeholder="Grade" type="text"> 
+            <input  name="contact" placeholder="Contact Number" type="text"> 
+            <button class="button butstyles" id="indexsrch" type="submit">Submit</button>
+		</div>
+
   </body>
 </html>
