--- a/views/_partials/header.ejs
+++ b/views/_partials/header.ejs
@@ -30,14 +30,11 @@
                     </li>  
                 </ul>
                 <ul class="right">
-                <%if (user) { %>
-                <li>
-                    <a class="linav" href="/logout">Log Out</a>
-                </li><%} else { %>
-                
-                <li>
-                    <a class="linav" href="/auth/google">Login with Google</a>
-                </li><%} %>
-                </ul>
+                <% if (user) { %>
+                    <li><a href="/logout"><i class="material-icons left"></i>Logout</a></li>
+                <% } else { %>
+                    <li><a href="/auth/google"><i class="material-icons left"></i>Login with Google</a></li>
+                <% } %>
+            </ul>
         </div>
     </nav>
