--- a/views/students/index.ejs
+++ b/views/students/index.ejs
@@ -1,21 +1,19 @@
 <%- include('./../_partials/header') %>
 
+<div class="container">
+<a href="students/new">Add a Student</a>
+</div>
 
- 
   <div class="container fullcards">
-    <% student.forEach(function(m) { %>
+    <% user.students.forEach(function(m) { %>
         <div class="row cardss">
             <div class="col m4 cards">
             <div class="card">
                 <div class="card-content">
                 <p>Student Name: <%= m.name %></p>
-                <p><%= m.parent %></p>
-                <p><%= m.grade %></p>
-                <p><%= m.contact %></p>
-                </div>
-                <div class="card-action">
-                <a href="#">This is a link</a>
-                <a href="#">This is a link</a>
+                <p>Parent Name: <%= m.parent %></p>
+                <p>Grade: <%= m.grade %></p>
+                <p>Contact Number: <%= m.contact %></p>
                 </div>
             </div>
             </div>
