--- a/views/students/new.ejs
+++ b/views/students/new.ejs
@@ -2,7 +2,7 @@
 
 
  	<form action="/students" method="post">
-		<div class="row addform">
+		<div class="container newstud">
 			<h1>New Student</h1>
             <input name="name" placeholder="Student's Name" type="text"> 
             <input  name="parent" placeholder="Parent's Name" type="text"> 
