--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,7 +17,6 @@ a {
 }
 
 nav {
-  height: 55px !important;
   border-bottom: 3px solid rgba(0, 0, 0, 0.5);
 }
 
@@ -35,12 +34,42 @@ nav {
 }
 
 .cards {
-  width: 350px !important; 
+  width: 317px !important; 
   padding: 20px !important;
+
+
 
 }
 
 .container {
   margin-top: 5% !important;
   margin-left: 5% !important;
+}
+
+.contactform {
+  background-color: white;
+  width: 300px !important;
+  margin-top: -30% !important;
+  margin-left: 70% !important;
+  border-radius: 20px !important;
+}
+
+#background {
+  width: 1280px;
+  z-index: -1000;
+  margin-top: 10% ;
+}
+
+.newstud {
+  background-color: white;
+  border: 1px solid black;
+}
+
+.fullcards {
+  margin-left: 14% !important;
+ 
+}
+
+.titles {
+  text-decoration: underline;
 }
