last hopefully for real

--- a/views/students/index.ejs
+++ b/views/students/index.ejs
@@ -1,8 +1,9 @@
 <%- include('./../_partials/header') %>
 
 <div class="container">
-<a href="students/new" class="btn-floating btn-small waves-effect waves-light red"><i class="material-icons">+</i></a>
+<a href="students/new" class="btn-floating btn-small waves-effect waves-light red addbut"><i class="material-icons">add</i></a>
 </div>
+
 
   <div class="container fullcards">
     <% user.students.forEach(function(m) { %>
