--- a/views/_partials/header.ejs
+++ b/views/_partials/header.ejs
@@ -6,6 +6,8 @@
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title>Marquez Tutoring</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/css?family=Butterfly+Kids" rel="stylesheet">
